added frontend , fixed build